setting up project

--- a/Xama_Tech/src/styles/variables.scss
+++ b/Xama_Tech/src/styles/variables.scss
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Space+Mono:wght@700&display=swap');
 $light_green:#64FFDA;
+$navy:#0A192F;
 $light_text:#CCD6F6;
 $dark_text:#8892B0;
 $darker_text:#616D89;
+$monsterat:'Montserrat', sans-serif;
+$mono:'Space Mono', monospace;
+$big_heading:clamp(40px, 8vw, 80px);
+$fs_xs:13px;
+
