--- a/Xama_Tech/src/components/Layout/Layout.scss
+++ b/Xama_Tech/src/components/Layout/Layout.scss
@@ -1,1 +1,104 @@
-@use '../../styles/variables.scss'
+@use '../../styles/variables.scss';
+body{
+    background-color: variables.$navy;
+
+}
+.layout{
+    background-color: variables.$navy;
+    color:variables.$dark_text;
+    width:100%;
+    height:100%;
+    .page-body{
+    // margin:0 1.8rem;
+        position: relative;
+        top:7rem;
+        display:flex;
+        justify-content: space-between;
+        .welcome{
+            margin:0 1.8rem;
+            font-family: variables.$mono;
+            display: flex;
+            flex-direction: row;
+            .welcome-info{
+                position: fixed;
+                color:variables.$dark_text;
+                margin-top:8rem;
+                font-size:1.3rem;
+                display:flex;
+                flex-direction: column;
+                gap:2rem;
+                .vertical-line {
+
+                    border: none;
+                    border: 1px solid variables.$dark_text;
+                    height: 80px;
+                    width: 0;
+                    margin-left:.5rem;
+                  }
+                  
+            }
+            .hero{
+                // margin:1rem 7rem;
+                margin-top: 3rem;
+                margin-left: 7rem;
+                display: flex;
+                flex-direction: column;
+                gap:.6rem;
+                .hero-title{
+                    color:variables.$light_green;
+                    margin-bottom:2rem;
+                }
+                .hero-name{
+                    font-size: 3.5rem;
+                    color:variables.$light_text;
+                    font-family: variables.$monsterat;
+                    font-weight: 700;
+                }
+                .hero-sub{
+                    font-size: 3.5rem;
+                    color:variables.$dark_text;
+                    font-family: variables.$monsterat;
+                    font-weight: 700;
+                }
+                .hero-desc{
+                    font-family: variables.$monsterat;
+                    font-size: 1rem;
+                    width:70%;
+                }
+                .hero-button{
+                    width:14rem;
+                    height:3rem;
+                    background-color: transparent;
+                    border: 1px solid variables.$light_green;
+                    color:variables.$light_green;
+                    border-radius: 3px;
+                    font-family: variables.$mono;
+                    cursor: pointer;
+                    margin-top: 2rem;
+                }
+            }
+        }
+        .contact-info{
+            display: flex;
+            flex-direction: column;
+            margin-top:13.5rem;
+            font-family: variables.$mono;
+            font-size: .8rem;
+            position: fixed;
+            right: 0;
+            gap:10rem;
+            .vertical-line{
+                border: none;
+                border: 1px solid variables.$dark_text;
+                width: 80px;
+                // width: 0;
+                margin-left:3.5rem;
+                transform: rotate(-90deg);
+                
+            }
+            .email{
+                transform: rotate(-90deg);
+            }
+        }
+    }
+}
