--- a/Xama_Tech/src/styles/variables.scss
+++ b/Xama_Tech/src/styles/variables.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Space+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Space+Mono:wght@400;100;200;300;400;500;600;700;800&display=swap');
 $light_green:#64FFDA;
 $navy:#0A192F;
 $light_text:#CCD6F6;
