--- a/Xama_Tech/src/components/Layout/Layout.scss
+++ b/Xama_Tech/src/components/Layout/Layout.scss
@@ -13,6 +13,7 @@ body{
         position: relative;
         top:7rem;
         display:flex;
+        
         justify-content: space-between;
         .welcome{
             margin:0 1.8rem;
@@ -49,19 +50,19 @@ body{
                     margin-bottom:2rem;
                 }
                 .hero-name{
-                    font-size: 3.5rem;
+                    font-size: clamp(2rem, 3.5rem, 3.5rem);
                     color:variables.$light_text;
-                    font-family: variables.$monsterat;
+                    font-family: variables.$poppins;
                     font-weight: 700;
                 }
                 .hero-sub{
-                    font-size: 3.5rem;
+                    font-size: clamp(2rem, 3.5rem, 3.5rem);
                     color:variables.$dark_text;
-                    font-family: variables.$monsterat;
+                    font-family: variables.$poppins;
                     font-weight: 700;
                 }
                 .hero-desc{
-                    font-family: variables.$monsterat;
+                    font-family: variables.$poppins;
                     font-size: 1rem;
                     width:70%;
                 }
@@ -98,6 +99,51 @@ body{
             }
             .email{
                 transform: rotate(-90deg);
+            }
+        }
+    }
+}
+@media screen and (max-width: 1050px){
+    .layout{
+        .page-body{
+            justify-content: start;
+            padding: 0;
+            margin: 0;
+            .welcome{
+                margin:0;
+                .welcome-info{
+                    display:none;
+                }
+                .hero{
+                    margin-left: 2rem;
+                    // margin-top: 1.3rem;
+                    // .hero-name{
+                    //     font-size: 2.5rem;
+
+                    // }
+                    // .hero-sub{
+                    //     font-size: 2.5rem;
+
+                    // }
+                    
+                }
+           
+            }     .contact-info{
+                    display:none;
+                }
+        }
+    }
+}
+@media screen and (max-width: 883px){
+    .layout{
+        .page-body{
+            .welcome{
+                .hero{
+                    margin-top:1.3rem;
+                    .hero-name,.hero-sub{
+                        font-size:2.5rem ;
+                    }
+                }
             }
         }
     }
