--- a/Xama_Tech/src/components/Layout/Layout.scss
+++ b/Xama_Tech/src/components/Layout/Layout.scss
@@ -11,12 +11,12 @@ body{
     .page-body{
     // margin:0 1.8rem;
         position: relative;
-        top:7rem;
+        top:5rem;
         display:flex;
         
         justify-content: space-between;
         .welcome{
-            margin:0 1.8rem;
+            margin:0 1rem;
             font-family: variables.$mono;
             display: flex;
             flex-direction: row;
@@ -40,19 +40,19 @@ body{
             }
             .hero{
                 // margin:1rem 7rem;
-                margin-top: 3rem;
-                margin-left: 7rem;
+                margin-top: 4rem !important;
+                margin-left: 5rem;
                 display: flex;
                 flex-direction: column;
                 gap:.6rem;
                 .hero-title{
                     color:variables.$light_green;
-                    margin-bottom:2rem;
+                    margin-bottom:1rem;
                 }
                 .hero-name{
                     font-size: clamp(2rem, 3.5rem, 3.5rem);
                     color:variables.$light_text;
-                    font-family: variables.$poppins;
+                    font-family: variables.$monsterat;
                     font-weight: 700;
                 }
                 .hero-sub{
@@ -62,7 +62,7 @@ body{
                     font-weight: 700;
                 }
                 .hero-desc{
-                    font-family: variables.$poppins;
+                    font-family: variables.$mono;
                     font-size: 1rem;
                     width:70%;
                 }
@@ -88,12 +88,13 @@ body{
             position: fixed;
             right: 0;
             gap:10rem;
+            left:90%;
             .vertical-line{
                 border: none;
                 border: 1px solid variables.$dark_text;
                 width: 80px;
                 // width: 0;
-                margin-left:3.5rem;
+                margin-left:4rem;
                 transform: rotate(-90deg);
                 
             }
@@ -115,11 +116,14 @@ body{
                     display:none;
                 }
                 .hero{
-                    margin-left: 2rem;
+                    margin-left: 1rem;
+                    gap:0;
                     // margin-top: 1.3rem;
                     // .hero-name{
                     //     font-size: 2.5rem;
-
+                        .hero-desc{
+                            width:90%;
+                        }
                     // }
                     // .hero-sub{
                     //     font-size: 2.5rem;
@@ -140,6 +144,8 @@ body{
             .welcome{
                 .hero{
                     margin-top:1.3rem;
+                    gap:0;
+
                     .hero-name,.hero-sub{
                         font-size:2.5rem ;
                     }
