--- a/Xama_Tech/src/styles/variables.scss
+++ b/Xama_Tech/src/styles/variables.scss
@@ -1,8 +1,9 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;400;500;600;800&family=Space+Mono:wght@700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;400;500;600;800&family=Space+Mono:wght@100;200;300;400;500;600;700;800&display=swap');
 
 $light_green:#64FFDA;
 $navy:#0A192F;
+$light_navy:#112240;
 $light_text:#CCD6F6;
 $dark_text:#8892B0;
 $darker_text:#616D89;
