--- a/Xama_Tech/src/components/About/About.scss
+++ b/Xama_Tech/src/components/About/About.scss
@@ -16,6 +16,7 @@
         display:flex;
         gap:.2rem;
         margin-bottom: 3rem;
+        justify-content: center;
         .title-number{
             color:variables.$light_green;
             margin-right:1rem;
