--- a/Xama_Tech/src/components/Layout/Layout.scss
+++ b/Xama_Tech/src/components/Layout/Layout.scss
@@ -24,7 +24,7 @@ body{
                 position: fixed;
                 color:variables.$dark_text;
                 margin-top:8rem;
-                font-size:1.3rem;
+                font-size:1.1rem;
                 display:flex;
                 flex-direction: column;
                 gap:2rem;
@@ -62,7 +62,8 @@ body{
                     font-weight: 700;
                 }
                 .hero-desc{
-                    font-family: variables.$mono;
+                    font-family: variables.$poppins;
+                    font-weight: 300;
                     font-size: 1rem;
                     width:70%;
                 }
@@ -118,7 +119,7 @@ body{
                 .hero{
                     margin-left: 1rem;
                     gap:0;
-                    // margin-top: 1.3rem;
+                    margin-top: 2rem !important;
                     // .hero-name{
                     //     font-size: 2.5rem;
                         .hero-desc{
