--- a/Xama_Tech/src/components/Works/Works.scss
+++ b/Xama_Tech/src/components/Works/Works.scss
@@ -12,6 +12,7 @@
         display:flex;
         gap:.2rem;
         margin-bottom: 3rem;
+        justify-content: center;
 
         .title-number{
             color:variables.$light_green;
@@ -74,7 +75,7 @@
 @media screen and (max-width:1172px){
     .works{
     margin-top:10rem;
-    width:100vw;
+    width:100%;
     // .revert{
     //     flex-direction: column-reverse;
 
@@ -87,8 +88,9 @@
             margin: 2rem 0;
             .square{
                 // display: block;
-                width:85%;
-                margin-right: 3rem;
+                width:95%;
+                margin-right: 1rem;
+                // margin-right: 3rem;
 
             }
             .inverse{
@@ -100,9 +102,9 @@
                 margin-top:.1rem;
                 .square-1{
                     // margin-left: auto;
-                    margin-top: .2rem;
-                    margin-right: 3rem;
-                    width:85%;
+                    // margin-top: .2rem;
+                    // margin-right: 3rem;
+                    width:95%;
                     text-align: center;
                     padding: 5px;
                 }
