--- a/Xama_Tech/src/components/Contact/Contact.scss
+++ b/Xama_Tech/src/components/Contact/Contact.scss
@@ -5,8 +5,9 @@
     justify-content: center;
     align-items: center;
     gap:.5rem;
+    margin:4rem 0;
     .title{ 
-        font-size:1.3 ;
+        font-size:1.3rem ;
         color:variables.$light_text;
 
         .title-number{
