--- a/Xama_Tech/src/components/Layout/Layout.scss
+++ b/Xama_Tech/src/components/Layout/Layout.scss
@@ -61,6 +61,13 @@ body{
                     font-family: variables.$poppins;
                     font-weight: 700;
                 }
+                // .container{
+                //     display: flex;
+                //     flex-direction: column;
+                //     height:4rem;
+                //     overflow: hidden;
+                //     overflow: scroll;
+                // }
                 .hero-desc{
                     font-family: variables.$poppins;
                     font-weight: 300;
