--- a/Xama_Tech/src/components/Navbar/Navbar.scss
+++ b/Xama_Tech/src/components/Navbar/Navbar.scss
@@ -8,20 +8,22 @@
     background-color: variables.$navy;
     backdrop-filter: blur(30px);
     position: fixed;
-    z-index:10;
+    z-index:15;
     transition: top .3s;
     top:0;
     left:0;
     right: 0;
     .logo{
-        font-size: 3rem;
-        font-weight: 700;
+        width: 10.6rem;
+        height: 2.2rem;
+        margin-top: 1.6rem;
         color: variables.$light_green;
-        margin:1.5rem;
-        cursor:pointer;
-        will-change: filter;
-        transition: filter 300ms;
-   
+      
+    img{
+        width:100%;
+        height: 100%;
+        cursor: pointer;
+    }
     }
  
   
