--- a/Xama_Tech/src/components/Store/Store.scss
+++ b/Xama_Tech/src/components/Store/Store.scss
@@ -28,17 +28,4 @@ font-weight: 300;
         flex-wrap: wrap;
     }
 }
-@media screen and (max-width:826px){
-    .store{
-        .items{
-            gap:1rem;
-        }
-    }
-}
-@media screen and (max-width:583px){
-    .store{
-        .items{
-            gap:.5rem;
-        }
-    }
-}
+//  
