--- a/Xama_Tech/src/components/About/About.scss
+++ b/Xama_Tech/src/components/About/About.scss
@@ -40,19 +40,53 @@
 
         }
         .square{
-            margin-top: 4rem;
-            .square-1{
-                width: 13rem;
-                height: 13rem;
-                background-color:  variables.$light_green;
+            position: relative;
+            width: 200px;  // Reduced from 300px
+            height: 200px; // Reduced from 300px
+            top:3rem;
+
+            .square-1 {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+                transition: transform 0.3s ease;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    // background-color: rgba(variables.$light_green, 0.4); // Light green overlay
+                    z-index: 1;
+                }
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                &:hover {
+                    transform: translate(10px, 10px);
+                }
             }
-            .square-2{
-                width: 13rem;
-                height: 13rem;
-                border: 1px solid variables.$light_green;
-                position: relative;
-                bottom:12.2rem;
-                left:.8rem;
+
+            .square-2 {
+                position: absolute;
+                top: 20px;
+                left: 20px;
+                width: 100%;
+                height: 100%;
+                background-color: variables.$light_green;
+                border-radius: 10px;
+                z-index: -1;
             }
         }
 }
