--- a/Xama_Tech/src/components/Footer/Footer.scss
+++ b/Xama_Tech/src/components/Footer/Footer.scss
@@ -1,6 +1,8 @@
 @use "../../styles/variables.scss";
 .foot{
     width: 100%;
+    z-index:100 !important
+     ;
     .name{
         position: relative;
         top: 4rem;
