--- a/Xama_Tech/src/components/Works/Works.scss
+++ b/Xama_Tech/src/components/Works/Works.scss
@@ -32,8 +32,13 @@
        margin:2rem 0;
         .square{
             width:80%;
-            height: 15rem;
+            height: 18rem;
             background-color: variables.$light_green;
+
+            img{
+                width:100%;
+                height: 100%;
+            }
         }
         .inverse{
             position: relative;
@@ -88,9 +93,9 @@
             margin: 2rem 0;
             .square{
                 // display: block;
-                width:95%;
+                width:80%;
                 margin-right: 1rem;
-                height: 11rem;
+                height: 21rem;
 
                 // margin-right: 3rem;
 
@@ -101,16 +106,61 @@
             }
             .inside-content{
                 // text-align: center;
-                margin-top:.1rem;
-                .square-1{
-                    // margin-left: auto;
-                    // margin-top: .2rem;
-                    // margin-right: 3rem;
-                    width:95%;
-                    text-align: center;
-                    padding: 5px;
-                }
+                // margin-top:.1rem;
+                // .square-1{
+                //     // margin-left: auto;
+                //     // margin-top: .2rem;
+                //     // margin-right: 3rem;
+                //     width:30%;
+                //     text-align: center;
+                //     padding: 5px;
+                // }
             }
+        }
+    }
+}
+@media screen and (min-width: 1800px) {
+    .works {
+        .work-content {
+            .square {
+                width: 30%;
+                height: 22rem;
+            }
+        }
+    }
+}
+
+// @media screen and (min-width: 1538px) {
+//     .works {
+//         .work-content {
+//             .square {
+//                 width: 30%;
+//                 height: 22rem;
+//             }
+//         }
+//     }
+// }
+@media screen and (max-width: 700px) {
+    .works {
+        margin-top:1rem;
+        .work-content {
+
+
+                .square-1{
+                    width:95%;
+                    height:max-content;
+                    background-color: variables.$light_navy;
+                    padding:.5rem;
+                    font-weight: 200;
+                    span{
+                        color:variables.$light_green;
+                    }
+                }
+                .square {
+                    width:95%;
+                    height: 10rem;
+                }
+            
         }
     }
 }
