--- a/Xama_Tech/src/components/Sidebar/Sidebar.scss
+++ b/Xama_Tech/src/components/Sidebar/Sidebar.scss
@@ -55,6 +55,7 @@
                 text-align: center;
                 width:10rem;
                 height:2.7rem;
+                font-size: 1.5rem;
                     color:variables.$light_green;
                     background-color: transparent;
                     font-family:variables.$mono;
