--- a/Xama_Tech/src/components/Navbar/Navbar.scss
+++ b/Xama_Tech/src/components/Navbar/Navbar.scss
@@ -78,6 +78,7 @@
                     position: relative;
                     overflow: hidden;
                     transition: transform .3s ease-in-out;
+                    font-size: 1.5rem;
 
                   }
                   .contact-button:hover{
