--- a/Xama_Tech/src/components/Works/Works.scss
+++ b/Xama_Tech/src/components/Works/Works.scss
@@ -1,166 +1,218 @@
 @use "../../styles/variables.scss";
-.works{
 
-    width: 100%;
-    // height:20rem;
-    margin:2rem 0;
+.works {
+    // width: 100%;
+    margin: 2rem auto;
+    padding: 0 20px;
+    max-width: 1400px;
+    overflow-x: hidden;
 
-    .work-title{
-        color:variables.$light_text;
+    .work-title {
+        color: variables.$light_text;
         font-family: variables.$mono;
-        font-size: 1.3rem;
-        display:flex;
-        gap:.2rem;
+        font-size: clamp(1rem, 2vw, 1.3rem);
+        display: flex;
+        gap: .2rem;
         margin-bottom: 3rem;
         justify-content: center;
+        flex-wrap: wrap;
 
-        .title-number{
-            color:variables.$light_green;
-            margin-right:1rem;
+        .title-number {
+            color: variables.$light_green;
+            margin-right: 1rem;
         }
     }
-    .inverse{
-        gap:0;
-    }  .revert{
+
+    .work-content {
+        display: flex;
+        align-items: center;
+        // gap: clamp(2rem, 4vw, 4rem);
+        // margin: clamp(2rem, 4vw, 4rem) 0;
+        flex-wrap: wrap;
+        
+        &.revert {
             flex-direction: row-reverse;
-
         }
-    .work-content{
-        font-family: variables.$poppins;
-       display: flex;
-       gap:6rem;
-       margin:2rem 0;
-        .square{
-            width:80%;
-            height: 18rem;
+
+        .square {
+            // flex: 1 1 400px;
+            // max-width: 400px;
+            width: 30rem;
+            min-height: 250px;
+            height: auto;
+            aspect-ratio: 16/9;
             background-color: variables.$light_green;
+            border-radius: 8px;
+            overflow: hidden;
 
-            img{
-                width:100%;
+            img {
+                width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
-        }
-        .inverse{
-            position: relative;
-            right:10rem;
-        }
-      
-        .inside-content{
-            position: relative;
-            // bottom:14rem;
-            // left:19rem;
-            // margin-top: 1rem;
-            .name{
-                display: flex;
-                flex-direction: column;
-                gap:.3rem;
-                // margin-left:32rem;
-                .content-title{
-                    color:variables.$light_green;
-                }
-                .content-name{
-                    color:variables.$light_text;
-                }
 
-            }
-            
-            .square-1{
-                width:80%;
-                height:max-content;
-                background-color: variables.$light_navy;
-                padding:.5rem;
-                font-weight: 200;
-                span{
-                    color:variables.$light_green;
-                }
-            }
-        }
-    }
-}
-@media screen and (max-width:1172px){
-    .works{
-    margin-top:10rem;
-    width:100%;
-    // .revert{
-    //     flex-direction: column-reverse;
-
-    // }
-        .work-content{
-            display: flex;
-            flex-direction: column-reverse;
-            justify-content: center;
-            align-items: center;
-            margin: 2rem 0;
-            .square{
-                // display: block;
-                width:80%;
-                margin-right: 1rem;
-                height: 21rem;
-
-                // margin-right: 3rem;
-
-            }
-            .inverse{
+            &.inverse {
                 position: relative;
-                right:0rem;
-            }
-            .inside-content{
-                // text-align: center;
-                // margin-top:.1rem;
-                // .square-1{
-                //     // margin-left: auto;
-                //     // margin-top: .2rem;
-                //     // margin-right: 3rem;
-                //     width:30%;
-                //     text-align: center;
-                //     padding: 5px;
-                // }
             }
         }
-    }
-}
-@media screen and (min-width: 1800px) {
-    .works {
-        .work-content {
-            .square {
-                width: 30%;
-                height: 22rem;
-            }
-        }
-    }
-}
 
-// @media screen and (min-width: 1538px) {
-//     .works {
-//         .work-content {
-//             .square {
-//                 width: 30%;
-//                 height: 22rem;
-//             }
-//         }
-//     }
-// }
-@media screen and (max-width: 700px) {
-    .works {
-        margin-top:1rem;
-        .work-content {
+        .inside-content {
+            flex: 1 1 300px;
+            min-width: 0;
 
+            .name {
+                margin-bottom: 1rem;
 
-                .square-1{
-                    width:95%;
-                    height:max-content;
-                    background-color: variables.$light_navy;
-                    padding:.5rem;
-                    font-weight: 200;
-                    span{
-                        color:variables.$light_green;
+                .content-title {
+                    color: variables.$light_green;
+                    font-size: clamp(1rem, 1.5vw, 1.2rem);
+                    margin-bottom: 0.5rem;
+                    display: block;
+                    word-wrap: break-word;
+
+                    a {
+                        display: inline-block;
+                        max-width: 100%;
+                        overflow-wrap: break-word;
                     }
                 }
-                .square {
-                    width:95%;
-                    height: 10rem;
+
+                .content-name {
+                    color: variables.$light_text;
+                    font-size: clamp(0.9rem, 1.2vw, 1rem);
                 }
+            }
+
+            .square-1 {
+                background-color: variables.$light_navy;
+                padding: clamp(1rem, 2vw, 1.5rem);
+                border-radius: 8px;
+                line-height: 1.6;
+                font-size: clamp(0.85rem, 1.2vw, 0.95rem);
+                word-wrap: break-word;
+
+                span {
+                    color: variables.$light_green;
+                }
+            }
+        }
+    }
+}
+
+// Extra Large screens
+@media screen and (min-width: 1800px) {
+    .works {
+        max-width: 1800px;
+        padding: 0 40px;
+
+        .work-content {
+            gap: 6rem;
             
+            .square {
+                max-width: 800px;
+            }
+        }
+    }
+}
+
+// Large screens
+@media screen and (max-width: 1400px) {
+    .works {
+        padding: 0 30px;
+        
+        .work-content {
+            gap: 3rem;
+        }
+    }
+}
+
+// Medium screens
+@media screen and (max-width: 1172px) {
+    .works {
+        margin-top: 3rem;
+        padding: 0 25px;
+
+        .work-content {
+            flex-direction: column !important;
+            align-items: stretch;
+            gap: 2rem;
+
+            .square {
+                flex: 1 1 100%;
+                width: 100%;
+                max-width: 100%;
+                margin: 0 auto;
+            }
+
+            .inside-content {
+                flex: 1 1 100%;
+                width: 100%;
+                padding: 0;
+
+                .name {
+                    text-align: left;
+                }
+
+                .square-1 {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+// Small screens
+@media screen and (max-width: 700px) {
+    .works {
+        margin-top: 2rem;
+        padding: 0 15px;
+
+        .work-title {
+            text-align: center;
+            padding: 0 10px;
+        }
+
+        .work-content {
+            margin: 2rem 0;
+            gap: 1.5rem;
+
+            .square {
+                min-height: 200px;
+            }
+
+            .inside-content {
+                .square-1 {
+                    padding: 15px;
+                }
+            }
+        }
+    }
+}
+
+// Extra small screens
+@media screen and (max-width: 480px) {
+    .works {
+        padding: 0 10px;
+
+        .work-content {
+            gap: 1rem;
+
+            .square {
+                min-height: 180px;
+            }
+
+            .inside-content {
+                .name {
+                    .content-title {
+                        font-size: 1rem;
+                    }
+                }
+
+                .square-1 {
+                    padding: 12px;
+                    font-size: 0.85rem;
+                }
+            }
         }
     }
 }
