--- a/Xama_Tech/src/components/Contact/Contact.scss
+++ b/Xama_Tech/src/components/Contact/Contact.scss
@@ -56,7 +56,7 @@
 
     input {
       flex: 1;
-      padding: 1rem;
+      // padding: 1rem;
       border: none;
       border-radius: 8px;
       background: rgba(217, 217, 217, 0.1);
